# ComfyUI-ZipUtils

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: GetZipInfo.py  load_zip.py
nodes/util/: HumanReadableBytes.py  IntToString.py
utils/: zip.py
